[tool.poetry]
name = "adit-radis-workspace"
version = "0.0.0"
description = ""
authors = ["Kai Schlamp <kai.schlamp@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.poetry.group.dev.dependencies]
djlint = "^1.19.16"

[tool.djlint]
profile = "django"
max_line_length = 120
ignore = "H021,H030,H031,T002"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
