[tool.poetry]
name = "adit-radis-workspace"
version = "0.0.0"
description = ""
authors = ["Kai Schlamp <kai.schlamp@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
